plugins/web-stories/third-party/vendor/ampproject/amp-toolbox/src/Validator/Spec/Error/UnknownCode.php
<?php

/**
 * DO NOT EDIT!
 * This file was automatically generated via bin/generate-validator-spec.php.
 */
namespace Google\Web_Stories_Dependencies\AmpProject\Validator\Spec\Error;

use Google\Web_Stories_Dependencies\AmpProject\Validator\Spec\Error;
use Google\Web_Stories_Dependencies\AmpProject\Validator\Spec\SpecRule;
/**
 * Error class UnknownCode.
 *
 * @package ampproject/amp-toolbox.
 *
 * @property-read string $format
 * @property-read int $specificity
 */
final class UnknownCode extends Error
{
    /**
     * Code of the error.
     *
     * @var string
     */
    const CODE = 'UNKNOWN_CODE';
    /**
     * Array of spec data.
     *
     * @var array{format: string, specificity?: int}
     */
    const SPEC = [SpecRule::FORMAT => 'Unknown error.', SpecRule::SPECIFICITY => 0];
}
